extends Node2D


func _on_level_1_button_pressed() -> void:
	pass # Replace with function body.


func _on_level_2_button_pressed() -> void:
	pass # Replace with function body.


func _on_level_3_button_pressed() -> void:
	pass # Replace with function body.


func _on_level_4_button_pressed() -> void:
	pass # Replace with function body.


func _on_level_5_button_pressed() -> void:
	pass # Replace with function body.


func _on_level_6_button_pressed() -> void:
	pass # Replace with function body.
